# zope.traversing

./: .coveragerc  .gitignore  .meta.toml  .travis.yml  AcquireNamespace.py  AttrItemNamespaces.py  CHANGES.rst  CHANGES.txt  CreateNamespace.py  DEPENDENCIES.cfg  DefaultTraversable.py  EtcNamespace.py  Exceptions.py  GetResource.py  IContainmentRoot.py  INSTALL.txt  INamespaceHandler.py  IPhysicallyLocatable.py  ITraversable.py  ITraverser.py  MANIFEST.in  ModuleNamespace.py  Namespaces.py  ObjectName.py  ParameterParsing.py  PhysicalLocationAdapters.py  PresentationNamespaces.py  README.rst  README.txt  SkinNamespace.py  Traverser.py  __init__.py  acquirenamespace.py  adapters.py  api.py  attritemnamespaces.py  buildout.cfg  configure.zcml  defaulttraversable.py  etcnamespace.py  (+22 more)
browser/: __init__.py  absoluteurl.py  configure.zcml  interfaces.py  tests.py
browser/tests/: test_absoluteurl.py
docs/: adapters.rst  api.rst  conf.py  index.rst  interfaces.rst  namespace.rst  publicationtraverse.rst  requirements.txt
docs/browser/: absoluteurl.rst  interfaces.rst
ftests/: layer.py  test_skin.py  test_vhosting.py
src/zope/traversing/: adapters.py  api.py  configure.zcml  interfaces.py  namespace.py  publicationtraverse.py  testing.py
src/zope/traversing/browser/: __init__.py  absoluteurl.py  configure.zcml  interfaces.py  tests.py
src/zope/traversing/tests/: ftest_zcml_dependencies.zcml  ftesting.zcml  test_conveniencefunctions.py  test_dependencies.py  test_etc.py  test_lang.py  test_namespacetrversal.py  test_physicallocationadapters.py  test_presentation.py  test_publicationtraverse.py  test_skin.py  test_traverser.py  test_vh.py  test_vhosting.py
tests/: __init__.py  testAcquire.py  testAtterItem.py  testConvenienceFunctions.py  testEtc.py  testNamespaceTrversal.py  testObjectName.py  testPhysicalLocationAdapters.py  testPresentation.py  testSkin.py  testTraverser.py  test_acquire.py  test_atteritem.py  test_conveniencefunctions.py  test_directives.py  test_etc.py  test_lang.py  test_namespacetrversal.py  test_objectname.py  test_physicallocationadapters.py  test_presentation.py  test_skin.py  test_skinf.py  test_traverser.py  test_vh.py  test_vhosting.py
