# Generated with zope.meta (https://zopemeta.readthedocs.io/) from:
# https://github.com/zopefoundation/meta/tree/master/src/zope/meta/pure-python
[build-system]
requires = [
    "setuptools >= 78.1.1,< 82",
    "wheel",
]
build-backend = "setuptools.build_meta"


[project]
name = "zope.traversing"
version = "6.1.dev0"
description = "Resolving paths in the object hierarchy"
license = "ZPL-2.1"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development",
]
dynamic = ["readme"]
requires-python = ">=3.10"
authors = [
    {name = "Zope Foundation and contributors",email = "zope-dev@zope.dev"},
]
maintainers = [
    {name = "Plone Foundation and contributors",email = "zope-dev@zope.dev"},
]
dependencies = [
    "transaction",
    "zope.component",
    "zope.i18n",
    "zope.i18nmessageid",
    "zope.interface>=4.0.4",
    "zope.location>=3.7.0",
    "zope.proxy",
    "zope.publisher",
    "zope.security",
]
keywords = [
    "zope",
    "traversal",
    "route",
    "URL",
    "view",
]

[project.optional-dependencies]
test = [
    "zope.annotation",
    "zope.browserresource[zcml]>=3.12",
    "zope.component[zcml]",
    "zope.configuration",
    "zope.security[zcml]>=3.8",
    "zope.tales",
    "zope.testing",
    "zope.testrunner >= 6.4",
]
docs = [
    "Sphinx",
    "repoze.sphinx.autointerface",
]

[project.urls]
Documentation = "https://zopetraversing.readthedocs.io/"
Source = "https://github.com/zopefoundation/zope.traversing"
Issues = "https://github.com/zopefoundation/zope.traversing/issues"
Changelog = "https://raw.githubusercontent.com/zopefoundation/zope.traversing/master/CHANGES.rst"

[tool.coverage.run]
branch = true
source = ["zope.traversing"]

[tool.coverage.report]
fail_under = 99
precision = 2
ignore_errors = true
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "pragma: nocover",
    "except ImportError:",
    "raise NotImplementedError",
    "if __name__ == '__main__':",
    "self.fail",
    "raise AssertionError",
    "raise unittest.Skip",
]

[tool.coverage.html]
directory = "parts/htmlcov"

[tool.setuptools.dynamic]
readme = {file = ["README.rst", "CHANGES.rst"]}

